fix: color adjustment contrast

--- a/src/app/Features/AdminDashboard/DashboardRegister.css
+++ b/src/app/Features/AdminDashboard/DashboardRegister.css
@@ -31,7 +31,7 @@
 }
 
 .dashboard-register-container {
-  color: #333;
+  color: #000;
   padding: 1rem;
 }
 
@@ -53,7 +53,7 @@
 }
 
 .dashboard-table-register th {
-  background-color: #e4f0ff;
+  background-color: #84E1E9;
 }
 
 .dashboard-table-register th,
